--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
+
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
@@ -24,9 +25,21 @@ repositories {
 }
 
 dependencies {
+	runtimeOnly 'com.h2database:h2'
+
+	// Validation 관련 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	//비밀번호 암호화 의존성 추가
+	implementation 'org.springframework.security:spring-security-core:6.3.5'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'at.favre.lib:bcrypt:0.10.2'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
