--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,6 @@ dependencies {
 	// Validation 관련 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	//비밀번호 암호화 의존성 추가
-	implementation 'org.springframework.security:spring-security-core:5.7.4'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 
@@ -37,6 +36,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'at.favre.lib:bcrypt:0.10.2'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'    // swagger
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
