--- a/build.gradle
+++ b/build.gradle
@@ -28,13 +28,12 @@ dependencies {
 	// Validation 관련 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	//비밀번호 암호화 의존성 추가
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'at.favre.lib:bcrypt:0.10.2'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'    // swagger
 
