--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=Sparta_3rd_Newsfeed
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/sparta_newsfeed
-spring.datasource.username=root
-spring.datasource.password=142mibn!@A
+spring.datasource.url=jdbc:mysql://localhost:3306/newsfeed
+spring.profiles.include=db
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create
