--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.application.name=Sparta_3rd_Newsfeed
 
 spring.datasource.url=jdbc:mysql://localhost:3306/sparta_newsfeed
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.show_sql=true
