--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.application.name=Sparta_3rd_Newsfeed
 
+spring.datasource.url=jdbc:mysql://localhost:3306/newsfeed
 
-spring.datasource.url=jdbc:mysql://localhost:3306/sparta_newsfeed
-spring.datasource.username=root
-spring.datasource.password=142mibn!@A
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
@@ -14,4 +12,5 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.config.import=optional:application-db.properties
 
